--- a/preview/menu.html
+++ b/preview/menu.html
@@ -4,10 +4,10 @@
     <title>Menu</title>
 </head>
 <body style="background-color:#B5E61D; font-size:20px;">
-    <b><a href="Menu/home.html" target="main">Home</a></b><br><br>
-    <b><a href="Menu/about.html" target="main">About Us</a></b><br><br>
-    <b><a href="Menu/signup.html" target="main">Signup</a></b><br><br>
-    <b><a href="Menu/signin.html" target="main">Signin</a></b><br><br>
-    <b><a href="Menu/logout.html" target="main">Logout</a></b>
+    <b><a href="menu/home.html" target="main">Home</a></b><br><br>
+    <b><a href="menu/about.html" target="main">About Us</a></b><br><br>
+    <b><a href="menu/signup.html" target="main">Signup</a></b><br><br>
+    <b><a href="menu/signin.html" target="main">Signin</a></b><br><br>
+    <b><a href="menu/logout.html" target="main">Logout</a></b>
 </body>
 </html>
