--- a/preview/index.html
+++ b/preview/index.html
@@ -9,7 +9,7 @@
 
     <frameset cols="20%,80%" border="2">
         <frame src="menu.html" name="menu">
-        <frame src="Menu/home.html" name="main">
+        <frame src="menu/home.html" name="main">
     </frameset>
 
 </frameset>
