--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_frameset">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -60,7 +60,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_frameset" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;My Website&lt;/title&gt;
@@ -93,7 +93,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_header">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -105,7 +105,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_header" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Header&lt;/title&gt;
@@ -139,7 +139,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_menu">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -151,7 +151,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_menu" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Menu&lt;/title&gt;
@@ -183,7 +183,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_home">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -195,7 +195,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_home" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Home&lt;/title&gt;
@@ -225,7 +225,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_about">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -237,7 +237,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_about" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;About Us&lt;/title&gt;
@@ -268,7 +268,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_logout">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -280,7 +280,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_logout" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Logout&lt;/title&gt;
@@ -312,7 +312,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_signin">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -324,7 +324,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_signin" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Signin&lt;/title&gt;
@@ -357,7 +357,7 @@
           </div>
 
           <!-- ✅ Premium Copy Button with Fixed Animation -->
-          <button class="copy-btn" data-clipboard-target="#myCode">
+          <button class="copy-btn" data-clipboard-target="#myCode_signup">
             <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
               <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -369,7 +369,7 @@
           </button>
         </div>
 
-        <pre class="code-block line-numbers"><code id="myCode" class="language-markup">&lt;!DOCTYPE html&gt;
+        <pre class="code-block line-numbers"><code id="myCode_signup" class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Signup&lt;/title&gt;
